--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
@@ -53,7 +53,7 @@
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
 <div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
-<main class="main-content" th:fragment="content">
+    <main class="main-content" th:fragment="content">
     <div class="wrapper col-md-9 container mt-4">
         <h1 class="tittle mb-4">Quản Lý Khách Hàng</h1>
         <div class="form-mb-4">
@@ -72,7 +72,6 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/customers/create" class="btn-create btn btn-success">Thêm Khách Hàng</a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
@@ -98,14 +97,9 @@
             <p th:text="${message}"></p>
             <button class="close-btn" onclick="this.parentElement.style.display='none'">&times;</button>
         </div>
-        <form th:action="@{/Admin/customers/deleteAll}" id="deleteForm" method="post">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                 <tr>
-                    <th>
-                        <input type="checkbox" id="selectAll" class="form-check-input">
-                        <i class="bi bi-check2-square"></i>
-                    </th>
                     <th>STT</th>
                     <th>Tên Khách Hàng</th>
                     <th>Số Điện Thoại</th>
@@ -116,21 +110,12 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item, c : ${customers.getContent()}">
-                    <td>
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input customerCheckbox"
-                                   th:value="${item.customerId}" id="customerCheck-${c.index}">
-                            <label class="form-check-label" th:for="'customerCheck-' + ${c.index}">
-                                <i class="bi bi-check-square"></i>
-                            </label>
-                        </div>
-                    </td>
+                <tr th:each="item, c : ${customers}">
                     <td th:text="${c.index + 1}"></td>
                     <td th:text="${item.customerName}"></td>
                     <td th:text="${item.phoneNumber}"></td>
                     <td th:text="${item.address}"></td>
-                    <td th:text="${item.user != null ? item.user.email : 'Không có email'}"></td>
+                    <td th:text="${item.email}"></td>
                     <td th:text="${#temporals.format(item.birthDate , 'dd/MM/yyyy')}"></td>
                     <td class="d-flex justify-content-center">
                         <button type="button" class="btn btn-warning btn-sm"
@@ -139,18 +124,12 @@
                             <i class="fas fa-edit"></i>
                         </button>
                     </td>
-
-
                 </tr>
                 </tbody>
             </table>
-            <button type="button" id="deleteBtn" class="btn btn-danger btn-sm" title="Xóa"
-                    onclick="deleteSelectedCustomer()">Xóa danh mục
-            </button>
-        </form>
 
         <!-- Modal chỉnh sửa khách hàng -->
-        <div th:each="item : ${customers.getContent()}" th:id="'editCustomerModal-' + ${item.customerId}"
+        <div th:each="item : ${customers}" th:id="'editCustomerModal-' + ${item.customerId}"
              class="modal fade" tabindex="-1" aria-labelledby="editCustomerModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -186,7 +165,7 @@
                             <div class="mb-3">
                                 <label class="form-label">Email:</label>
                                 <input type="text" class="form-control" name="email"
-                                       th:value="${item.user != null ? item.user.email : ''}" required>
+                                       th:value="${item.email}" required>
                             </div>
 
                             <div class="d-grid">
@@ -197,10 +176,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
         <nav aria-label="Page navigation" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
 
@@ -252,11 +227,8 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
-<script th:src="@{/js/admin/deleteMultipleCustomer.js}"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:fragment="sidebarScript"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
-
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
