--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/addProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/addProduct.html
@@ -170,7 +170,7 @@
                             </div>
                         </div>
 
-                        <input type="file" id="imageUpload" name="imageFiles" style="display: none;" accept="image/*" multiple>
+                        <input type="file" id="imageUpload" name="files" style="display: none;" accept="image/*" multiple>
                         <!-- Input ẩn để lưu trữ các file đã chọn -->
                         <input type="hidden" id="selectedImages" name="selectedImages">
 
