--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/export.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/export.html
@@ -151,11 +151,9 @@
                 <div class="col-md-2">
                     <input type="number" name="products[${index}].productQuantity"  class="form-control" value="${quantity}" readonly>
                 </div>
-                <div class="col-md-2">
                     <input type="hidden" name="products[${index}].productPrice"  class="form-control" value="${price}">
-                </div>
                 <div class="col-md-2">
-                    <input type="number" name="products[${index}].quantityInput" placeholder="Số lượng .." class="form-control" required min="0"
+                    <input type="number" name="products[${index}].quantityInput" placeholder="Số lượng xuất.." class="form-control" required min="0"
                      oninput="validateQuantity(this, ${quantity})">
                      <small class="text-danger d-none">Vượt quá số lượng !</small>
                 </div>
