--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
@@ -63,8 +63,8 @@
                         <label class="form-label fw-bold">Trạng thái tồn kho</label>
                         <select class="form-select" name="statusStock">
                             <option value="0">-- Lọc trạng thái --</option>
-                            <option value="3" th:selected="${statusStock == 3}">Còn hàng</option>
-                            <option value="2" th:selected="${statusStock == 2}">Sắp hết hàng</option>
+                            <option value="3" th:selected="${statusStock == 3}">Ổn định</option>
+                            <option value="2" th:selected="${statusStock == 2}">Số lượng ít</option>
                             <option value="1" th:selected="${statusStock == 1}">Hết hàng</option>
 
                         </select>
@@ -123,11 +123,10 @@
             <p th:text="${message}"></p>
             <button class="close-btn" onclick="this.parentElement.style.display='none'">&times;</button>
         </div>
-        <form th:action="@{/wareHouses/deleteAll}" id="deleteForm" method="post">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                 <tr>
-                    <th><label for="selectAll"></label><input type="checkbox" id="selectAll"></th>
+                    <th>STT</th>
                     <th>Tên Sản Phẩm</th>
                     <th>Nhà Cung Cấp</th>
                     <th>Số Lượng Tồn</th>
@@ -137,12 +136,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item  : ${wareHouses}">
-                    <td>
-                        <label>
-                            <input type="checkbox" class="employeeCheckbox" name="customerIds">
-                        </label>
-                    </td>
+                <tr th:each="item ,c  : ${wareHouses}">
+                    <td th:text="${c.index + 1}"></td>
                     <td th:text="${item.product != null ? item.product.name : 'K co Product'}"></td>
                     <td th:text="${item.product.supplier != null ? item.product.supplier.name : 'Không có nhà cung cấp'}"></td>
                     <td th:text="${item.quantity}"></td>
@@ -162,8 +157,6 @@
                 </tr>
                 </tbody>
             </table>
-            <button type="submit" class="btn btn-danger mt-2">Xóa thông tin đã chọn</button>
-        </form>
         <nav aria-label="Page navigation" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
 
