--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
@@ -66,7 +66,7 @@
         <td th:text="${brand.country}"></td>
         <td th:text="${#temporals.format(brand.createAt, 'dd-MM-yyyy HH:mm')}"></td>
         <td th:text="${#temporals.format(brand.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
-        <td class="d-flex justify-content-center">
+        <td class="text-center">
           <button type="button" class="btn btn-warning editBrandBtn"
                   th:data-id="${brand.brandID}"
                   th:data-name="${brand.name}"
