--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
@@ -161,7 +161,7 @@
                 <td th:text="${product.formattedPrice}"></td>
                 <td th:text="${product.category.name}"></td>
                 <td th:text="${product.brand.name}"></td>
-                <td>
+                <td class="text-center">
                     <!-- Nút Chỉnh sửa (Icon bút chì) -->
                     <a th:href="@{/Admin/product-manager/edit/{productID}(productID=${product.productID})}"
                        class="btn btn-warning btn-sm"
