--- a/finalModule/finalModule/src/main/resources/templates/admin/order/OldProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/order/OldProduct.html
@@ -57,12 +57,17 @@
     <div class="wrapper col-md-9 container mt-4">
         <h1 class="tittle mb-4">Chọn Sản Phẩm</h1>
         <div class="form-mb-4">
-            <div class="d-flex align-items-center mb-3">
-                <form method="GET" th:action="@{/Admin/product-manager/showListProduct}" class="d-flex w-50">
-                    <label for="searchProduct" class="form-label">Tìm kiếm :</label>
-                    <input type="text" name="keyword" id="searchProduct" class="form-control me-2" placeholder="Nhập thông tin cần tìm..."
-                           th:value="${keyword}">
-                    <button type="submit" class="btn btn-danger"><i class="fas fa-search"></i></button>
+            <div class="search-container">
+                <form class="search-form" th:action="@{/Admin/product-manager/showListProduct}" method="GET">
+                    <div class="input-select" style="width: 120px; min-width: 120px;">
+                        Tên sản phẩm
+                    </div>
+                    <input class="form-control form-control-sm" type="text" id="searchInput" name="keyword"
+                           th:value="${keyword}"
+                           placeholder="Nhập tên sản phẩm..." aria-label="Search">
+                    <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
                 </form>
                 <a th:href="@{/Admin/order/add}" class="btn btn-primary ms-auto px-4">Thoát</a>
             </div>
