--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
@@ -161,11 +161,9 @@
                 <td th:text="${product.formattedPrice}"></td>
                 <td th:text="${product.category.name}"></td>
                 <td th:text="${product.brand.name}"></td>
-                <td>
-                    <!-- Nút Chỉnh sửa (Icon bút chì) -->
+                <td class="text-center">
                     <a th:href="@{/Admin/product-manager/edit/{productID}(productID=${product.productID})}"
-                       class="btn btn-warning btn-sm"
-                       title="Chỉnh sửa">
+                       class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i>
                     </a>
                 </td>
